# majn

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  changelog.md  pom.xml  roadmap.md
.github/workflows/: build-jar.yml  build.yml  test.yml
engine/: .gitignore  Cargo.toml  build.rs  pom.xml
engine/assets/textures/block/: atlas.json
engine/src/: block.rs  camera.rs  chunk.rs  crosshair_shader.wgsl  cube_geometry.rs  debug_overlay.rs  input.rs  instance.rs  item_ui_shader.wgsl  lighting.rs  main.rs  physics.rs  player.rs  raycast.rs  shader.wgsl  texture.rs  ui_shader.wgsl  wireframe_renderer.rs  wireframe_shader.wgsl  world.rs
engine/src/main/java/com/kacpersledz/majn/: Main.java
engine/src/main/java/com/kacpersledz/majn/controller/: Camera.java  InputHandler.java
engine/src/main/java/com/kacpersledz/majn/game/: Game.java
engine/src/main/java/com/kacpersledz/majn/view/: FontRenderer.java  Renderer.java  Window.java
engine/src/main/java/com/kacpersledz/majn/world/: Block.java  Chunk.java  World.java
engine/src/test/java/com/kacpersledz/majn/: GameTest.java
engine/src/test/java/com/kacpersledz/majn/world/: ChunkTest.java  WorldTest.java
engine/src/ui/: crosshair.rs  hotbar.rs  inventory.rs  item.rs  item_renderer.rs  mod.rs  ui_text.rs
src/main/java/com/kacpersledz/majn/: Main.java
src/test/java/com/kacpersledz/majn/: MainTest.java
