[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = "25.0.2"
winit = "0.30.11"
glam = "0.30.4" # For vector and matrix math
chrono = "0.4"
wgpu_text = "0.9.3"
lazy_static = "1.4.0"
image = "0.25.6"
rand = "0.9.1"
